mongodb/6.0/modules/ROOT/pages/mongodb-connector-reference.adoc
= MongoDB Connector Reference - Mule 4


Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

MongoDB Connector v6.0

Anypoint Connector for MongoDB (MongoDB Connector) is a closed-source connector that provides a connection between the Mule runtime engine (Mule) and third-party software on a MongoDB server.

Release Notes: xref:release-notes::connector/mongodb-connector-release-notes-mule-4.adoc[MongoDB Connector Release Notes]

== Configurations
---
[[config]]
=== Config


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
 | The connection types to provide to this configuration. | | x
| Read Concern a| Enumeration, one of:

** LOCAL
** AVAILABLE
** MAJORITY
** LINEARIZABLE
** SNAPSHOT |  Enables you to control the consistency and isolation properties of the data read from replica sets and replica set shards. |  |
| Read Preference a| Enumeration, one of:

** PRIMARY
** PRIMARY_PREFERED
** SECONDARY
** SECONDARY_PREFERRED
** NEAREST |  Specifies the read preferences for this connection. |  PRIMARY |
| Maximum Staleness Seconds a| Number |  Specifies, in seconds, how stale a secondary node on a MongoDB cluster can be before the client stops using it for read operations. |  -1 |
| Read Preference Tags a| Array of <<ReadPreferenceTag>> |  If replica set members are associated with tags, you can specify a tag set (array of tag specification documents) in the read preference to target those members. |  |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Write Concern Acknowledgment a| String |  Requests acknowledgment that the write operation has propagated to the specified number of MongoDB instances. You can write a number of instances n>0 or use a value from the list. |  |
| Write Concern Timeout a| Number |  This option specifies a time limit, in milliseconds, for the Write Concern. The option applies to Write Concern Acknowledgment values greater than 1. |  |
| Write Concern Timeout Timeunit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The Timeunit for the Write Concern Timeout. |  SECONDS |
|===

==== Connection Types

[[config_connection]]
===== Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Servers (host:port) a| Array of <<ServerAddress>> |  The server where your MongoDB instance is located. You can specify multiple servers. |  | x
| Database a| String |  Specify the database name to which you want to connect. |  | x
| Username a| String |  The username to use for authentication. |  |
| Password a| String |  The password to use for authentication. If you don't want to use authentication, the password and username must both be empty.  |  |
| Replica Set Name a| String |  The name of the replica set to which to connect. Use this field to connect to a MongoDB cluster.  |  |
| Authentication Source a| String |  |  |
| Compressors a| Array of String |  List of compressors to enable network compression for communication between this client and a mongod/mongos instance. If you specify multiple compressors, then the order in which you list the compressors matter as well as the communication initiator. |  |
| Zlib Compression Level a| Number |  An integer that specifies the compression level if using zlib for network compression. 0 means No Compression. 1 through 9 are the compression levels, with 1 being the lowest compression level, and 9 the highest. Higher compression levels take more time to process than lower ones. |  -1 |
| Connection Timeout a| Number |  The connection timeout for establishing socket connections. Set this field to `0` if you don't want the connection to time out. |  30 |
| Connection Timeout Timeunit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The connection timeout unit. |  SECONDS |
| Local Threshold a| Number |  The size of the latency window for selecting among multiple suitable MongoDB instances. |  15 |
| Local Threshold Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The local threshold time unit. |  MILLISECONDS |
| Server Selection Timeout a| Number |  Specifies how long to block for server selection before throwing an exception. |  30 |
| Server Selection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The server selection time unit. |  SECONDS |
| Socket Timeout a| Number |  The socket timeout. It is used for I/O socket read and write operations. The default is 0. Leave this field as `0` if you don't want socket read and write operations to time out. |  |
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The socket timeout unit. |  SECONDS |
| Retry Writes a| Boolean |  Enable retryable writes |  false |
| Authentication Mechanism a| Enumeration, one of:

** PLAIN
** SCRAM_SHA_1
** SCRAM_SHA_256 |  The authentication mechanism used for this connection |  |
| Tls Context a| <<Tls>> |  |  |
| Min Connection Pool Size a| Number |  The minimum size for the connection pool. |  |
| Max Connection Pool Size a| Number |  The maximum size for the connection pool. |  100 |
| Max Wait Queue Time a| Number |  The maximum wait queue time for the connection pool. |  120 |
| Max Wait Queue Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The maximum wait queue time unit for the connection pool. |  SECONDS |
| Max Connection Life Time a| Number |  The maximum connection lifetime for the connection pool. |  |
| Max Connection Life Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The maximum connection lifetime time unit for the connection pool. |  SECONDS |
| Max Connection Idle Time a| Number |  The maximum connection idle time for the connection pool. |  |
| Max Connection Idle Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The maximum connection idle time time unit for the connection pool. |  SECONDS |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations
* <<addUser>>
* <<collectionExists>>
* <<countDocuments>>
* <<createCollection>>
* <<createFile>>
* <<createIndex>>
* <<dropCollection>>
* <<dropDatabase>>
* <<dropIndex>>
* <<dump>>
* <<executeCommand>>
* <<findDocuments>>
* <<findFiles>>
* <<getFileContent>>
* <<insertDocument>>
* <<insertDocuments>>
* <<listCollections>>
* <<listIndexes>>
* <<mapReduce>>
* <<removeDocuments>>
* <<removeFiles>>
* <<restoreFromDirectory>>
* <<restoreFromFile>>
* <<updateDocuments>>

== Supported Input Sources
* <<object-listener>>

[NOTE]
This input source (listener) uses Object Store to save watermarks. You might experience limitations that are specific to the Object Store implementation you are using (Object Store for CloudHub deployments or Object Store for on-premises deployments), so you must configure Object Store to suit your needs. +
For more information, see https://help.mulesoft.com/s/article/The-Different-Types-of-Object-Stores-Explained[The Different Types of Object Stores Explained].

== Operations

[[addUser]]
=== Add User
`<mongo:add-user>`


Adds a new user for this db


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Username a| String |  Name of the user |  | x
| Password a| String |  Password to use for authentication |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[collectionExists]]
=== Collection Exists
`<mongo:collection-exists>`


Returns `true` if the specified collection exists.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[countDocuments]]
=== Count Documents
`<mongo:count-documents>`


Counts the number of documents that match the given query. If no query is passed, the operation returns the number of elements in the collection.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The target collection |  | x
| Query a| Binary |  The optional query for counting documents. Only documents matching the query are counted. If unspecified, all documents are counted. The value can be: {"field1": "value1"}, or it can contain operators { "field1": { $gte: 1, $lt:  10 } }.|  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[createCollection]]
=== Create Collection
`<mongo:create-collection>`


Creates a new collection. If the collection already exists, a MongoException is thrown.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection to create |  | x
| Max Objects a| Number |  The maximum number of documents the new collection is able to contain |  |
| Collection Size a| Number |  The maximum size of the new collection |  |
| Collection Size Data Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB |  Data Unit of the Collection Size parameter, in bytes by default |  BYTE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[createFile]]
=== Create File
`<mongo:create-file>`

Creates a new file in the database, saving the specified content, filename, contentType, and extraData.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Content a| Binary |  The content of the new file. This content is an InputStream. |  #[payload] | x
| Filename a| String |  The name of new file |  | x
| Metadata a| Binary |  A JSON object that holds information to store. |  |
| Streaming Strategy a|

* <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Indicates whether to use repeatable streams |  |
| Target Variable a| String |  The name of a variable to store the operation's output |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[createIndex]]
=== Create Index
`<mongo:create-index>`


Creates a new index


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection where the index will be created |  | x
| Field Name a| String |  The name of the field that is indexed |  | x
| Sort Order a| Enumeration, one of:

** ASC
** DESC |  The indexing order |  ASC |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[dropCollection]]
=== Drop Collection
`<mongo:drop-collection>`


Deletes a collection and all the objects it contains. If the collection does not exist, the operation throws a NOT_FOUND error.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection to drop |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[dropDatabase]]
=== Drop Database
`<mongo:drop-database>`


Drop the current database.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Database Name a| String |  The name of the database to drop. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[dropIndex]]
=== Drop Index
`<mongo:drop-index>`


Drops an existing index.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection |  | x
| Index Name a| String |  The name of the index to drop |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[dump]]
=== Dump
`<mongo:dump>`


Executes a dump of the database to the specified output directory. If no output directory is provided, the default /dump directory is used.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Directory a| String |  Output directory where dump files will be created |  | x
| Output Name Prefix a| String |  Output file name prefix. If not specified, the database name is used. |  |
| Oplog a| Boolean |  Point in time backup (requires an oplog) |  false |
| Operation Timeout a| Number |  Maximum wait time for the dump |  60 |
| Operation Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the maximum wait time for the dump |  SECONDS |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[executeCommand]]
=== Execute Command
`<mongo:execute-command>`


Executes a command on the database.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Command a| Binary |  The command to execute on the database as a Document. |  #[payload] |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[findDocuments]]
=== Find Documents
`<mongo:find-documents>`


Finds all documents that match a given query. If no query is specified, all documents of the collection are retrieved. If no fields object is specified, all fields are retrieved.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| Binary |  The optional query for finding documents. If unspecified, all documents are retrieved. Values can be: {"field1": "value1"} or can contain operators { "field1": { $gte: 1, $lt: 10 } }.|  |
| Sort By a| Binary |  Enables you to sort the result list. A file can be sorted only by file_id or uploadDate. |  |
| Page Size a| Number |  Size of documents of each page to return |  100 |
| Limit a| Number |  Limit of documents to return. |  |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Collection Name a| String |  |  | x
| Fields a| String | Comma-separated list of fields to return from each document. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[findFiles]]
=== Find Files
`<mongo:find-files>`


Lists all files that match the given query.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| Binary |  The query object used to list all files. Values can be {"field1": "value1"} or can contain operators { "field1": { $gte: 1, $lt: 10 } }. ||
| Sort a| Binary |  Enables you to sort the result list. A file can be sorted only by file_id or uploadDate. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT-FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[getFileContent]]
=== Get File Content
`<mongo:get-file-content>`

Gets an InputStream to the content of the file specified by File Id.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Id a| Binary |  The mandatory file ID. |  #[payload] |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|*Type* a| Any
|*Attributes Type* a| Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[insertDocument]]
=== Insert Document
`<mongo:insert-document>`


Insert a document in a collection. If you don't use the _id field to specify an object, MongoDB automatically generates one.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection where to insert the given document. |  | x
| Document a| Binary |  The document to insert |  #[payload] |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[insertDocuments]]
=== Insert Documents
`<mongo:insert-documents>`

Insert a document in a collection. If you don't use the _id field to specify an object, MongoDB automatically generates one.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection where to insert the given document. |  | x
| Documents a| Binary |  The list of the documents to insert. |  #[payload] |
| Write Ordered a| Boolean |  Indicates if the list of documents will be executed in order. If set to true and an error occurs during the processing of one of the write operations, MongoDB returns without processing any remaining write operations in the list. |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BulkOperationResult>>
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[listCollections]]
=== List Collections
`<mongo:list-collections>`


Lists names of collections available on this database.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY

[[listIndexes]]
=== List Indexes
`<mongo:list-indexes>`

List existent indexes in a collection


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<Index>>
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[mapReduce]]
=== Map Reduce
`<mongo:map-reduce>`


Transforms a collection into a collection of aggregated groups, as follows:
. Applies a supplied element-mapping function to each element, which transforms each element into a key-value pair
. Groups the resulting pairs by key
. Reduces values in each group by applying a supplied 'reduce' function coded in JavaScript

Refer to the MongoDB documentation for more information.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection to map and reduce |  | x
| Mapping Function a| String |  A JavaScript-encoded mapping function |  | x
| Reduce Function a| String |  A JavaScript-encoded reducing function |  | x
| Output Collection a| String |  The name of the output collection to which to write the results. This replaces an existing collection, if any exists. This field is mandatory if the resulting objects are be larger than 16MB. If Output Collection is unspecified, the computation is performed in-memory and is not persisted. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[removeDocuments]]
=== Remove Documents
`<mongo:remove-documents>`


Removes all the documents that match the specified query. If a query is not specified, all documents are removed. Note that it is more efficient to drop a connection and re-create it than to use this operation.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The collection whose elements will be removed |  | x
| Query a| Binary |  The query object used to detect the elements to delete. It can be: {"field1": "value1"} Or contain operators: { "field1": { $gte: 1, $lt:  10 } } |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[removeFiles]]
=== Remove Files
`<mongo:remove-files>`


Removes the file that matches the given file ID. If no file ID is specified, all files are removed.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Id a| Binary |  The ID of the file to be deleted. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[restoreFromDirectory]]
=== Restore From Directory
`<mongo:restore-from-directory>`


Takes the output from the Dump operation, restores it, and generates indexes. The operation only inserts records when the IDs don't already exist in the database.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Input Path a| String |  Input path of the dump files. This path MUST be a directory. |  | x
| Drop Collections a| Boolean |  Indicates whether to drop existing collections before performing the restore |  false |
| Oplog Replay a| Boolean |  Replay oplog used for point-in-time restore |  false |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[restoreFromFile]]
=== Restore From File
`<mongo:restore-from-file>`


Restores a single .bson file or zip file.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection to restore |  | x
| Input a| Binary |  An InputStream that points to the dump file. It can be a zip file or .bson file |  #[payload] |
| Drop Collection a| Boolean |  Indicates whether to drop existing collections before performing restore |  false |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


[[updateDocuments]]
=== Update Documents
`<mongo:update-documents>`


Updates documents that match the specified query. If a query is not specified, all documents are retrieved. If the multi parameter is set to false, only the first document matching the query is updated. Otherwise, all documents matching the query are updated.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The name of the collection to update |  | x
| Query a| Binary |  The query object used to detect the element to update. The value can be: {"field1": "value1"}, or it can contain operators { "field1": { $gte: 1, $lt:  10 } }. |  |
| Content To Update a| Binary |  The object to replace the one that matches the query |  | #payload
| Multiple Update a| Boolean |  Indicates whether only the first document matching the query is updated |  false |
| Upsert a| Boolean |  If set to true, creates a new document when no document matches the query criteria. The default value is false, which does not insert a new document when no match is found. |  false |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations
* <<config>>

==== Throws
* MONGO:DUPLICATE_ERROR
* MONGO:CONSISTENCY_ERROR
* MONGO:RETRY_EXHAUSTED
* MONGO:NOT_FOUND
* MONGO:PERMISSIONS_DENIED
* MONGO:TIMEOUT
* MONGO:INVALID_INPUT
* MONGO:CONNECTIVITY


== Input Sources

[[object-listener]]
=== On Object Listener
`<mongo:object-listener>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Collection Name a| String |  The collection that will be watched to detect the matching documents. |  | x
| Watermark Field a| String |  The field that will queried to detect the objects that match the trigger condition. |  | x
| Primary Node Only a| Boolean |  Indicates whether this source should only executed only on the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<config>>


== Types
[[ServerAddress]]
=== Server Address

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | The host to which you want to connect. |  | x
| Port a| Number | The port of the host to which you want to connect. | 27017 |
|===

[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, which makes connections vulnerable to attacks. Use this value at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===


[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===


[[ReadPreferenceTag]]
=== Read Preference Tag

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name Value a| Object |  |   | x
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory allocated to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed, the content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. |  SHA-256|
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if useSecureHash is `false`. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[BulkOperationResult]]
=== Bulk Operation Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| Any |  |  |
| Items a| Array of <<BulkItem>> |  |  |
| Successful a| Boolean |  |  |
|===

[[BulkItem]]
=== Bulk Item

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Exception a| Any |  |  |
| Id a| Any |  |  |
| Message a| String |  |  |
| Payload a| Binary |  |  |
| Status Code a| String |  |  |
| Successful a| Boolean |  |  |
|===

[[Index]]
=== Index

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  |
| Name a| String |  |  |
| Order a| Enumeration, one of:

** ASC
** DESC |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
